
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int VM_EXEC ;
 unsigned int VM_READ ;
 unsigned int VM_WRITE ;
 int snprintf (char*,size_t,char*,unsigned long,unsigned long,char*,char*,char*) ;

__attribute__((used)) static void name_mmap(unsigned long start, unsigned long end, unsigned flags,
   char *buffer, size_t length) {
 snprintf(buffer, length, "%016lx_%016lx_%s%s%s",
  start, end,
  (flags & VM_READ) ? "r" : "-",
  (flags & VM_WRITE) ? "w" : "-",
  (flags & VM_EXEC) ? "x" : "-");
}
